--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Jarman Quote Generator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body onload="generate()">
     <div class="container">
         <h1>Jarman Quote Generator</h1>
         <button onclick="generate()">Generate</button>
